@@ -3,6 +3,9 @@ Next Release
   - Fixed a bug introduced in 3.0a7 where setup.py would not detect the
     Python version correctly.  Patch by Daniele Paolella.
 
+  - Removed the test suite for the ``memmon`` console script, which was 
+    moved to the Superlance package in 3.0a7.
+
 3.0a7
  
   - We now bundle our own patched version of Medusa contributed by Jason
